remove console.log statements

--- a/portal/templates/patient_profile_create.html
+++ b/portal/templates/patient_profile_create.html
@@ -64,7 +64,6 @@
                                 $(this).attr("type", "radio");
                              });
 
-                            //console.log(orgsList)
                             $("#userOrgs input[name='organization']").each(function() {
                                 $(this).on("click", function() {
                                     $("#userOrgs").find(".help-block").html("");
@@ -253,7 +252,7 @@ $(document).ready(function(){
                         'family':$.trim($('input[name=lastname]').val())
                     };
                     _demoArray['birthDate'] = $('input[name=birthDate]').val();
-                    
+
                     _demoArray['telecom'] = [];
 
                     var emailVal = $.trim($('input[name=email]').val());
@@ -302,7 +301,6 @@ $(document).ready(function(){
 
                 }).catch(function(error) {
                     //Display Error Here
-                    //console.log('error: ' + error);
                     errorMessage += (errorMessage != '' ? '<br/>' : '') + error;
                     if (errorMessage != '') $('#serviceErrorMsg').html('<small>Server processing error: ' + errorMessage + '</small>').fadeIn();
                     tnthAjax.reportError(_userId, "{{url_for('patients.patient_profile_create')}}", errorMessage, true);
@@ -314,7 +312,6 @@ $(document).ready(function(){
 
     function _get(apiUrl, requestType, requestData, sync) {
         var errorMessage = '';
-        console.log('apiUrl: ' + apiUrl)
         return new Promise (function(resolve, reject) {
             $.ajax ({
                 type: (requestType ? requestType : 'GET'),
@@ -328,11 +325,7 @@ $(document).ready(function(){
             }).fail(function(xhr) {
                 errorMessage = 'Error processing request: ' + apiUrl;
                 errorMessage += "\nstatus: " + xhr.status;
-                errorMessage +="\nresponse text: " + $.trim(xhr.responseText)
-                console.log(requestData);
-                console.log(errorMessage);
-                console.log("response Text: " + xhr.responseText);
-                console.log("response status: " +  xhr.status);
+                errorMessage +="\nresponse text: " + $.trim(xhr.responseText);
                 reject(Error(errorMessage));
             });
 
