--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -1478,11 +1478,9 @@ div.right-panel {
   border-bottom: 1px solid #e8e7e7;
   padding-top: 2em;
 }
-@media (min-width: 992px) {
-  .core-data-procedure {
-    max-width: 900px;
-  }
- }
+#profileProcedureContainer table {
+  border: 0;
+}
 .profile-item-title {
   color: @sectionTitleColor;
   margin-bottom: 1.5em;
