--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -1291,10 +1291,6 @@ h4.detail-title {
   }
 }
 
-@media (min-width: 992px) {
-  .core-data-procedure {
-    max-width: 900px;
-  }
 #mainDiv.profile .profile-item-edit-btn {
   position: absolute;
   top: 2em;
@@ -2180,6 +2176,9 @@ div.org-container {
 
 #profileProcedureContainer {
   margin-left: 1em;
+  table {
+    border: 0;
+  }
   #tnthproc {
     max-width: 95%
   }
@@ -2210,6 +2209,7 @@ div.org-container {
   margin-left: 0.5em
   td {
     padding: 0.15em;
+    line-height: 2.3em;
   }
 }
 
