--- a/portal/templates/coredata.html
+++ b/portal/templates/coredata.html
@@ -82,7 +82,7 @@
 </div>
 <!--<button type="submit" class="btn btn-lg btn-tnth-primary continue-btn">I'm Done Entering Treatments</button> &nbsp;&nbsp;-->
 <br/>
-<div class="btn btn-tnth-primary">{{ _("Continue") }} <i class="fa fa-chevron-right"></i></div>
+<div class="btn btn-tnth-primary continue-btn">{{ _("Continue") }} <i class="fa fa-chevron-right"></i></div>
 <br/><br/><br/><br/>
 
 {% endif %}
