UI copyright text based on country of origin changes

--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -211,6 +211,14 @@ select:not([multiple]) {
 #mainDiv.profile .logo-container * {
   color: #F5F5F5;
 }
+#mainDiv.profile .copyright-container,
+#mainDiv.portal .copyright-container  {
+  color: #F5F5F5;
+  margin-bottom: 1em;
+}
+#mainDiv.profile .logo-container {
+  margin: auto;
+}
 #mainDiv.profile .footer-wrapper {
   margin-left: 25%;
   position: inherit !important;
