--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -335,6 +335,15 @@ select:not([multiple]) {
   .study-id-view td {
     margin-top: 0.4em;
   }
+  .logo-container {
+    margin: auto;
+  }
+}
+
+#mainDiv.profile .copyright-container,
+#mainDiv.portal .copyright-container  {
+  color: #F5F5F5;
+  margin-bottom: 1em;
 }
 
 @media (max-width: 1199px) {
