--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -1364,6 +1364,14 @@ h4.detail-title {
   z-index: 21;
   display: none;
 }
+#mainDiv.profile .copyright-container,
+#mainDiv.portal .copyright-container  {
+  color: #F5F5F5;
+  margin-bottom: 1em;
+}
+#mainDiv.profile .logo-container {
+  margin: auto;
+}
 .profile-item-title {
   color: #5b5e61;
   margin-bottom: 1.5em;
