--- a/portal/templates/portal.html
+++ b/portal/templates/portal.html
@@ -63,7 +63,7 @@
 </div>
 -->
 {% endblock %}
-{% block footer %}{{footer(False, True)}}{% endblock %}
+{% block footer %}{{footer(False, True, user)}}{% endblock %}
 {% block document_ready %}
     $(".button-container").each(function() {
         $(this).prepend('<div class="loading-message-indicator"><i class="fa fa-spinner fa-spin fa-2x"></i></div>');
