--- a/portal/templates/staff_profile_create.html
+++ b/portal/templates/staff_profile_create.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
+{% from "flask_user/_macros.html" import back_btn, footer %}
 {% block main %}
-{% from "flask_user/_macros.html" import back_btn %}
 {% from "profile_macros.html" import profileName, profileBirthDate, profileEmail, profilePhone, profileAltPhone, profileSaveBtn %}
 {% from "initial_queries_macros.html" import consent_fields %}
 <br/>
@@ -310,6 +310,7 @@ $(document).ready(function(){
     clear();
 
 });
-
-
+{% endblock %}
+{% block footer %}
+{{footer(user=user)}}
 {% endblock %}
