--- a/portal/templates/initial_queries.html
+++ b/portal/templates/initial_queries.html
@@ -71,7 +71,7 @@
   <div id="homeFooter" class="container-fluid">
     <div class="row">
         <div class="col-xs-6 col-lg-8 footer-container">
-            <div class="copyright-container">{{linksHTML(user)}}</div>
+            <div class="copyright-container">{{linksHTML(user=user)}}</div>
         </div>
         <div class="col-xs-6 col-lg-4 footer-container logo-container">
             <div class="pull-right">{{logo()}}</div>
