fix copyright text font size

--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -262,6 +262,9 @@ select:not([multiple]) {
   color: #F5F5F5;
   margin-bottom: 1em;
 }
+.copyright-container {
+  font-size: 0.9em;
+}
 #mainDiv.profile .logo-container {
   margin: auto;
 }
