--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -313,6 +313,9 @@ select:not([multiple]) {
   .logo-container * {
     color: #F5F5F5;
   }
+  .copyright-container {
+    font-size: 0.9em;
+  }
   .footer-wrapper {
     margin-left: 25%;
     position: inherit !important;
