--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -1373,6 +1373,9 @@ h4.detail-title {
   color: #F5F5F5;
   margin-bottom: 1em;
 }
+.copyright-container {
+  font-size: 0.9em;
+}
 #mainDiv.profile .logo-container {
   margin: auto;
 }
